paid/force-app/main/default/objects/Paid_Invoice_Line__c/Paid_Invoice_Line__c.object-meta.xml
<CustomObject>
    <label>Paid_Invoice Line</label>
    <nameField>
        <label>Invoice Line Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Paid_invoiceLine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>