paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Base_Currency_FX_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Base_Currency_FX_Date__c</fullName>
    <label>Paid Base Currency FX Date</label>
    <type>Date</type>
</CustomField>