paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Paid_Billing_Frequency__c</fullName>
    <label>Paid Billing Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Quarterly</fullName>
            </value>
            <value>
                <fullName>Semiannual</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
            <value>
                <fullName>Invoice Plan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>