paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Calculated_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Paid_Calculated_Quantity__c</fullName>
    <label>Paid Calculated Quantity</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>