paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Charge_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Charge_Date__c</fullName>
    <label>Paid Charge Date</label>
    <type>Date</type>
</CustomField>