paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Charge_Type__c</fullName>
    <label>Paid Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One-Time</fullName>
            </value>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Usage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>