paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Debits_Payment_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Paid_Debits_Payment_Allocations__c</fullName>
    <label>Paid Debits (Payment Allocations)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>