paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Grouped_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Paid_Grouped_Quantity__c</fullName>
    <label>Paid Grouped Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>