paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Invoice_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Paid_Invoice_Line_Type__c</fullName>
    <label>Paid Invoice Line Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Regular</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>