paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Negative_Line_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Paid_Negative_Line_Conversion__c</fullName>
    <label>Paid Negative Line Conversion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>