paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Override_Initial_Revenue_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Override_Initial_Revenue_Start_Date__c</fullName>
    <label>Paid Override Initial Revenue Start Date</label>
    <type>Date</type>
</CustomField>