paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Paid_Product_Name__c</fullName>
    <label>Paid Product Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>