paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Paid_Quantity__c</fullName>
    <label>Paid Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>