paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Revenue_Allocation_Amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_Revenue_Allocation_Amount__c</fullName>
    <label>Paid Revenue Allocation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>