paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Start_Date__c</fullName>
    <label>Paid Start Date</label>
    <type>Date</type>
</CustomField>