paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Tax_Location_Code_Override__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Location_Code_Override__c</fullName>
    <label>Paid Tax Location Code (Override)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>