paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Tax_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Paid_Tax_Postal_Code__c</fullName>
    <label>Paid Tax Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>