paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Paid_Unique_Id__c</fullName>
    <externalId>true</externalId>
    <label>Paid Unique Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>