paid/force-app/main/default/objects/Paid_Invoice_Line__c/fields/Paid_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Paid_Unit_Price__c</fullName>
    <label>Paid Unit Price</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Currency</type>
</CustomField>